--- a/TableViews/Base.lproj/Main.storyboard
+++ b/TableViews/Base.lproj/Main.storyboard
@@ -26,35 +26,46 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="1XO-hb-DcQ"/>
+                    <connections>
+                        <segue destination="v55-HD-Euq" kind="show" identifier="showDetails" id="C3v-Kc-rq7"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zn9-zK-WvE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="877" y="-507"/>
         </scene>
-        <!--Item 2-->
-        <scene sceneID="ynS-cB-Z98">
+        <!--Table View Details View Controller-->
+        <scene sceneID="zwe-mP-Cit">
             <objects>
-                <viewController id="th0-UA-t6G" sceneMemberID="viewController">
+                <viewController id="v55-HD-Euq" customClass="TableViewDetailsViewController" customModule="TableViews" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="13i-Fs-nsf"/>
-                        <viewControllerLayoutGuide type="bottom" id="nx1-xd-UX4"/>
+                        <viewControllerLayoutGuide type="top" id="Oxs-gP-e3s"/>
+                        <viewControllerLayoutGuide type="bottom" id="dpg-Ln-bq7"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="D8j-rQ-TRd">
+                    <view key="view" contentMode="scaleToFill" id="BQN-qi-U7O">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="cRB-ao-Rn5">
-                                <rect key="frame" x="-64" y="-138" width="600" height="600"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w0R-jw-q5c">
+                                <rect key="frame" x="279" y="289" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="w0R-jw-q5c" secondAttribute="centerX" id="5KT-KC-IE3"/>
+                            <constraint firstAttribute="centerY" secondItem="w0R-jw-q5c" secondAttribute="centerY" id="YgR-xI-3T7"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="gfG-h9-fmO"/>
+                    <connections>
+                        <outlet property="labelLabel" destination="w0R-jw-q5c" id="zAS-cr-rl1"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BZ0-If-QLV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EGR-eG-A4b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="165" y="261"/>
+            <point key="canvasLocation" x="1549" y="-507"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="RBV-qq-Ydc">
@@ -68,7 +79,6 @@
                     </tabBar>
                     <connections>
                         <segue destination="hP1-DL-xt3" kind="relationship" relationship="viewControllers" id="YW6-Le-833"/>
-                        <segue destination="th0-UA-t6G" kind="relationship" relationship="viewControllers" id="Az9-XK-B39"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JuC-lb-jQ8" userLabel="First Responder" sceneMemberID="firstResponder"/>
